# gamebaby-20180928-dumped

./: CMakeLists.txt  README  characters.txt  combineds.txt  game_sdl.cpp  gb.snd.txt  gbsnd_nogui.cpp  gbsnd_sdl.cpp  growin_sdl.cpp  landriser_sdl.cpp  mkanigra_sdl.cpp  mkchips_sdl.cpp  mkfont_sdl.cpp  mkforest_sdl.cpp  mkicon_sdl.cpp  mkpatgra_sdl.cpp  sdl.hpp  sdl_controller.cpp  sdl_screen.cpp  shell.html  test_gbscr.cpp  wawa_sdl.cpp  winmantester_sdl.cpp
libgbact/: CMakeLists.txt  block.hpp  board.cpp  board.hpp  boy.cpp  bullet.cpp  character.cpp  character.hpp  character_data.cpp  enemy.cpp  greeting_sphere.cpp  hero.cpp  item.cpp  lady.cpp  lady_monitor.cpp  meat.cpp  player.cpp  process.hpp  routine.hpp  stage.cpp  stage.hpp  wall.cpp
libgbact/processes/: edit.cpp  play.cpp
libgbact/routines/: chooser_context.cpp  edit_context.cpp  indication_context.cpp  play_context.cpp  sleep_context.cpp
libgbgui/: CMakeLists.txt  canvas.hpp  icon.hpp  preset.hpp  widget.hpp  window.hpp
libgbgui/canvases/: canvas.cpp  canvas__create_sub_widget.cpp  canvas__draw.cpp  canvas__make_apng_stream.cpp  canvas__operate.cpp  canvas__update.cpp
libgbgui/icons/: icon.cpp  icon_data__down.txt  icon_data__minus.txt  icon_data__plus.txt  icon_data__sunken_left.txt  icon_data__unchecked.txt  icon_data__up.txt
libgbgui/presets/: create_graphics_editor.cpp
libgbgui/widgets/: button.cpp  check_button.cpp  color_holder.cpp  color_maker.cpp  container.cpp  create_button_menu.cpp  dial.cpp  frame.cpp  icon_selector.cpp  label.cpp  menu.cpp  node.cpp  radio_button.cpp  root.cpp  table.cpp  text_roll.cpp  widget.cpp
libgbgui/windows/: window.cpp  window__update_frame_image.cpp  window_manager.cpp
libgbpng/: CMakeLists.txt  README  mkapng.cpp  png.cpp  png.hpp  png__bitpack.cpp  png__filter.cpp  png__unbitpack.cpp  png__unfilter.cpp  png_animation_builder.cpp  png_animation_control.cpp  png_animation_frame.cpp  png_background_info.cpp  png_binary.cpp  png_binary__filter.cpp  png_binary__unfilter.cpp  png_binary_cursor.cpp  png_binary_view.cpp  png_chunk.cpp  png_chunk__calculate_crc.cpp  png_chunk_list.cpp  png_chunk_set.cpp  png_direct_color_image.cpp  png_file.cpp  png_file__unfilter.cpp  png_file_wrapper.cpp  png_frame_control.cpp  png_frame_data.cpp  png_image.cpp  png_image_data.cpp  png_image_data__extract.cpp  png_image_data__unfilter.cpp  png_image_header.cpp  png_indexed_color_image.cpp  png_movie.cpp  png_palette.cpp  png_picture.cpp  png_transparency_info.cpp  test_main.cpp  test_png_rw.cpp  (+1 more)
libgbscr/: CMakeLists.txt  README  __script.hpp  dtree.hpp  execution.hpp  execution_context.cpp  expr.hpp  list.hpp  object.hpp  process.cpp  process.hpp  script.cpp  shared_string.cpp  shared_string.hpp  short_string.hpp  stmt.hpp  stream.hpp  table.hpp  token.hpp  value.hpp
libgbscr/dtrees/: README  list.cpp  value.cpp
libgbscr/exprs/: expr.cpp  expr_element.cpp  make_expr.cpp  operand.cpp  operate.cpp  operate.hpp  operate__accesses.cpp  operate__arithmetics.cpp  operate__assignments.cpp  operate__bitwises.cpp  operate__comparisons.cpp  operate__logicals.cpp  operate__others.cpp  operation.cpp  read_operand.cpp  variable.cpp
libgbscr/objects/: property.cpp  reference.cpp  value.cpp  variable_table.cpp
libgbscr/processes/: process.cpp  process__call.cpp  process__load_file.cpp  process__step.cpp  process_private.hpp
libgbscr/stmts/: routine.cpp  stmt.cpp  stmt_list.cpp
libgbscr/streams/: stream.cpp  stream__read_number.cpp  stream__skip.cpp
libgbscr/tables/: table.cpp  variable.cpp
libgbscr/tokens/: block.cpp  cursor.cpp  token.cpp  token_cursor.cpp  token_string.cpp
libgbscr/values/: class_info.cpp  object.cpp  reference.cpp  table.cpp  table_observer.cpp  value.cpp  value__convert_to.cpp  variable.cpp  variable_table.cpp
libgbsnd/: CMakeLists.txt  README  device.hpp  execution.hpp  execution_context.cpp  list.hpp  object.hpp  script.hpp  shared_string.cpp  shared_string.hpp  stmt.hpp
libgbsnd/devices/: device.cpp  device__noise.cpp  device__square_wave.cpp
libgbsnd/exprs/: expr.cpp  expr_queue.cpp  make_expr.cpp  operand.cpp  operation.cpp
libgbsnd/objects/: reference.cpp
libgbsnd/scripts/: script.cpp  script_token.cpp  script_token_cursor.cpp  script_token_string.cpp
libgbstd/: CMakeLists.txt  Image__frame.cpp  README  area.hpp  binary_stream_reader.cpp  board.hpp  canvas.hpp  color.hpp  column_menu.cpp  context.hpp  control_device.hpp  controller.cpp  controller.hpp  direction.hpp  entry_list.hpp  environment.cpp  environment.hpp  figures.hpp  fixed_point_number.hpp  font.cpp  font.hpp  font_data.cpp  garden.cpp  garden.hpp  group_task.cpp  icon.hpp  image.cpp  image.hpp  image__draw.cpp  image__png.cpp  image__print.cpp  image__transfer.cpp  image_frame.cpp  interval_timer.hpp  io.hpp  line_maker.cpp  line_maker.hpp  menu.hpp  menu_base.cpp  piece.hpp  (+36 more)
libgbstd/binary_streams/: binary_stream.cpp  binary_stream_writer.cpp
libgbstd/boards/: area.cpp  basic_board.tcpp  basic_board_view.tcpp  board.cpp  board_view.cpp
libgbstd/canvases/: canvas.cpp  canvas__create_sub_widget.cpp  canvas__draw.cpp  canvas__operate.cpp  canvas__update.cpp
libgbstd/contexts/: context.cpp  context_stack.cpp
libgbstd/icons/: icon.cpp  icon_data__left.txt  icon_data__right.txt
libgbstd/images/: drawing_recorder.cpp  font_data.cpp  icon.cpp  icon_data__checked.txt  icon_data__sunken_right.txt  image.cpp  image__draw.cpp  image__load.cpp  image__png.cpp  image__transfer.cpp  image__webp.cpp  image_cursor.cpp  image_frame.cpp  line_maker.cpp
libgbstd/ios/: binary_stream.cpp  binary_stream.hpp  binary_stream_reader.cpp  binary_stream_writer.cpp  io.cpp  riff_chunk.cpp  riff_subchunk_view.cpp  wave.cpp  wave.hpp
libgbstd/pieces/: piece.cpp  piece_manager.cpp
libgbstd/programs/: chooser.cpp  common.cpp  context.cpp  indication.cpp  process.cpp  program.cpp  sleep.cpp  value.cpp
libgbstd/routines/: chooser_context.cpp  common.cpp  indication_context.cpp  sleep_context.cpp
libgbstd/spaces/: area.cpp  body.cpp  object.cpp  space.cpp  space.tcpp  text_object.cpp
(+55 files in other folders)
